<resources>
    <string name="next">Next</string>
    <string name="enter_description">Enter the todo description</string>
    <string name="enter_todo_title">Enter the todo title</string>
    <string name="create_todo_error">Error on create todo</string>
    <string name="go_back">Back</string>
    <string name="retry">Retry</string>
    <string name="new_todo">New todo</string>
    <string name="successfully_created_todo">Successfully created todo</string>
    <string name="go_to_home">Go to Home</string>
    <string name="todo_title">Title</string>
    <string name="todo_description">Description</string>
    <string name="toolbar_create_title">Create Todo</string>
</resources>