<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:placeholderText="@string/enter_todo_title"
        android:hint="@string/todo_title"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/todo_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todo_description"
        app:placeholderText="@string/enter_description"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/create_todo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        />
</LinearLayout>