<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/created_successfully_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_todo_error"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/retry_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/created_successfully_txt"
        android:layout_margin="25dp"
        android:text="@string/retry"
        />
    <Button
        android:id="@+id/go_back_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/retry_btn"
        android:layout_marginHorizontal="25dp"
        android:text="@string/go_back"
        />
</RelativeLayout>