<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/created_successfully_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="32sp"
        android:text="@string/successfully_created_todo" />
    <Button
        android:id="@+id/go_back_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/created_successfully_txt"
        android:layout_marginHorizontal="25dp"
        android:text="@string/new_todo"
        />
    <Button
        android:id="@+id/go_to_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/go_back_btn"
        android:layout_marginHorizontal="25dp"
        android:text="@string/go_to_home"
        />
</RelativeLayout>